--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </head>
   <body>
     <!--Header-->
-    <header>Header<header>
+    <header>Header</header>
 
     <!--Main Content-->
     <main>Main Content</main>
