Add three more links to the footer

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
     <footer> 
         <ul>
             <li><a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></li>
-            <li><a href="""></li>
-            <li><a href="""></li>
-            <li><a href="""></li>
+            <li><a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Visit our Instagram (opens in a new tab)"><i class="fa-brands fa-instagram"></i></li>
+            <li><a href="https://twitter.com/" target="_blank" rel="noopener" aria-label="Visit our Twitter (opens in a new tab)"><i class="fa-brands fa-twitter"></i></li>
+            <li><a href="https://www.youtube.com/" target="_blank" rel="noopener" aria-label="Visit our Youtube channel (opens in a new tab)"><i class="fa-brands fa-youtube"></i></li>
 
         </ul>
     </footer>
