added styles to reasons section

--- a/index.html
+++ b/index.html
@@ -63,9 +63,10 @@
             </div>
             
         </section>
-        <section id="reasons">
-             <h2 id="reasons-header">Why love running with us?</h2>
-             <div id="benefits">
+        <!--Reasons Section-->
+    <section id="reasons">
+        <h2>Why love running with us?</h2>
+        <div id="benefits">
                 <div id="benefits-physical">
                     <div>
                         <h3>FEEL HEALTHY<i class="fa-solid fa-heart-pulse"></i></h3>
@@ -94,7 +95,6 @@
                     </div>      
                 </div>
              </div>
-            
         </section>
 
     </main>
