add first image to gallery

--- a/gallery.html
+++ b/gallery.html
@@ -38,7 +38,13 @@
     </header>
 
     <!--Main Content-->
-    <main>Main Content</main>
+    <main>
+        <section id="gallery">   
+        <div id="photos">
+            <img src="assets/css/images/athletes.webp" alt="Two athletes running together">
+        </div>
+        </section>
+    </main>
 
     <!--Footer-->
     <footer>
