--- a/gallery.html
+++ b/gallery.html
@@ -42,6 +42,14 @@
         <section id="gallery">   
         <div id="photos">
             <img src="assets/css/images/athletes.webp" alt="Two athletes running together">
+            <img src="assets/css/images/girls.webp" alt="Girls running at charity event">
+            <img src="assets/css/images/runner3.webp" alt="Solo male runner jogging on the beach">
+            <img src="assets/css/images/man.webp" alt="Man at charity paint running festival">
+            <img src="assets/css/images/runner1.webp" alt="Solo female runner jogging through Phoenix Park">
+            <img src="assets/css/images/runner2.webp" alt="Runners competing in marathon">
+            <img src="assets/css/images/runner4.webp" alt="Solo female runner jogging on beach">
+            <img src="assets/css/images/running_gang.webp" alt="Large group of runners jogging in the rain">
+            <img src="assets/css/images/mud-run.webp" alt="Two women runners taking a muddy selfie after Mud Runners championship">
         </div>
         </section>
     </main>
