--- a/signup.html
+++ b/signup.html
@@ -39,7 +39,7 @@
 
     <!--Main Content-->
     <main> 
-        <section>
+        <section id="signup">
             <form id="signup-form" action="https://formdump.codeinstitute.net" method="POST" >
                 <h2>Let's get you signed up! <i class="fa-solid fa-heart-pulse"></i></h2>
                 <label for="first_name">First Name</label>
