--- a/gallery.html
+++ b/gallery.html
@@ -39,7 +39,8 @@
 
     <!--Main Content-->
     <main>
-        <section id="gallery">   
+        <section id="gallery"> 
+            <h2 class="hidden-heading">Gallery</h2>  
         <div id="photos">
             <img src="assets/css/images/athletes.webp" alt="Two athletes running together">
             <img src="assets/css/images/girls.webp" alt="Girls running at charity event">
